@@ -1,3 +1,9 @@
+2000-07-25  Mark Kettenis  <kettenis@gnu.org>
+
+	* hurd/thread-cancel.c (hurd_thread_cancel): When cancelling the
+	calling thread, set the cancellation flag and return success
+	instead of EINTR.
+
 2000-07-25  Ulrich Drepper  <drepper@redhat.com>
 
 	* libio/Makefile: Add rules build, run, and distribute tst-widetext.c.
